# ad688-employability-sp25A1-group6

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  data_cleaning.html  data_cleaning.ipynb  eda.html  eda.ipynb  index.html  index.qmd  ml_methods.html  ml_methods.ipynb  pyproject.toml  references.bib  requirements.txt  robots.txt  search.json  sitemap.xml  skill_gap_analysis.html  skill_gap_analysis.ipynb
_site/: about.html  index.html  search.json
